ping_pong/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-dep
  template:
    metadata:
      labels:
        app: ping-pong-dep
    spec:
      containers:
        - name: ping-pong-dep
          image: megaeonise/ping_pong:v3
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 256Mi
              cpu: "0.2"
