ping_pong/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong-dep
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3000
